# sceance

./: .envrc.example  .gitignore  LICENSE  README.md  README.rst  get_showtime_watchlist.py  main.py  pyproject.toml  requirements.txt  setup.py  showtimes_to_google_cal.py  theaters.txt  watchlist.txt
docs/: privacy-policy.md
film_to_cal/: __main__.py  film_to_calc.py  filter_select_showings.py  get_showings.py  showtimes_to_google_cal.py  update_watchlist.py
film_to_cal/data/: theaters.txt  watchlist.txt
sceance/: __init__.py  __main__.py  file_helpers.py  film_to_cal.py  filter_select_showings.py  get_showings.py  load_config.py  set_theaters.py  set_watchlist.py  settings.ini  showtimes_to_google_cal.py  update_watchlist.py
sceance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sceance/data/: film_details.pickle  settings.ini  watchlist.txt
sceance/data/theaters/: new-york-theaters.txt  paris-theaters.txt  san-francisco-theaters.txt
sceance/data/watchlists/: cannes-watchlist.txt  criterion-watchlist.txt  oscar-winners-watchlist.txt
tests/: test_argparse.py  test_file_helpers.py  test_filter_select_showings.py
