[tool.poetry]
name = "sceance"
version = "0.1.0"
description = ""
authors = ["sjmignot <sjmignot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.22.0"
google-api-python-client = "1.7.11"
google-auth-oauthlib = "0.4.1"
protobuf = "3.11.2"
selenium = "3.141.0"
webdriver-manager = "2.3.0"
progress = "1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
